--- a/Calculadora/src/index.html
+++ b/Calculadora/src/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+  </style>
+
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
